--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,15 @@
 	},
 	"scripts": {
 		"post-install-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
+			"php55 artisan clear-compiled",
+			"php55 artisan optimize"
 		],
 		"post-update-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
+			"php55 artisan clear-compiled",
+			"php55 artisan optimize"
 		],
 		"post-create-project-cmd": [
-			"php artisan key:generate"
+			"php55 artisan key:generate"
 		]
 	},
 	"config": {
